# BinartLibs-Cpp

./: .clang-format  .clang-format-bak  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  Makefile  Preload-bak.cmake  README.md  README.rules.md  README.temp.md  bootstrap.sh  config.cmake  dependency.cmake  mt_config.h.in  xmake.bak.lua  xmake.lua
.xmake/macosx/x86_64/: xmake.conf
.xmake/macosx/x86_64/cache/: detect  history  toolchain
_temp/: clang-tidy-results.yml
cmake/: AndroidNdkGdb.cmake  commondir.cmake  googletest-download.cmake  googletest.cmake  ndk_links.md  update-CPM.sh  util.cmake
doc/: CPM.cmake.md  cmake.toolchain.md  cmake编写.md  cpp-style.md  debug-cmake.md  gtest.md  httpdoc.md  libs.md  lintall.md  projenvs.md  test_plantuml.wsd  vcpkg.md  高级技巧.md
doc/clang/: clang-tidy.md
examples/: CMakeLists.txt  main.cpp
examples/ios-app/: CMakeLists.txt
src/: BitBuffer.cpp  BitBuffer.h  BitUtil.h  CMakeLists.txt  xmake.lua
src/bitbuffer/: CMakeLists.txt  bitbuffer.hpp  bitutil.hpp
src/eventbus/: CMakeLists.txt  eventbus.h
src/fancy/: fancy.h  mt_auto_ref.h  mt_shared_ptr.h  mt_singleton_tpl.h  mt_thread_safe_map.h  mt_threadsafe_dqueue.h  mt_tpl_class_available.h
src/fancy/foundation/: mt_container_operator.h  mt_pair.h  mt_shared_ptr.h  mt_thread_safe_map.h  mt_threadsafe_dqueue.h
src/fancy/foundation/functional/: mt_map.h  mt_merge.h
src/fancy/tool/: mt_tpl_class_available.h
src/fancy/unitest/: README.md
src/http/: CMakeLists.txt  http.cc  http.cpp  http.hpp  xmake.lua
src/ifaddrs/: ifaddrs.c  ifaddrs.h  xmake.lua
src/json/: CMakeLists.txt  README.md  README_slothjson.md  json.h  xmake.lua
src/json/mtjson/: CMakeLists.txt  mtjson.cc  mtjson.cpp  mtjson.h  mtjsontype.h
src/json/mtjsonv2/: README.md
src/json/src/: me_test.pb.h
src/log/: CMakeLists.txt  file_log.cc  file_log.h  log.cc  log.h
src/net/: CMakeLists.txt
src/p/: CMakeLists.txt  README.md  jobber.h  promise.h  scheduler.h
src/queue/: CMakeCache.txt  CMakeLists.txt  Makefile  concurrent_queue.cpp  concurrent_queue.hpp  dispatch_queue.cpp  dispatch_queue.hpp  dispatch_queue_task.cpp  dispatch_queue_task.hpp  dispatch_queue_task_imp.hpp  ios.toolchain.cmake  thread_poll.h
src/tcp/: CMakeLists.txt  Makefile
src/timber/: CMakeLists.txt  README.md  mt_leaf.h  mt_timber.h  mt_timber_base.h  mt_tree.h  mt_type.h
temp/test0/: CMakeLists.txt  main.cpp
temp/test1/: CMakeLists.txt  main.c
temp/test2/: CMakeLists.txt
temp/test2/src/: CMakeLists.txt  main.cpp
temp/test3/: CMakeLists.txt  main.cpp
temp/test3/hello/: hello.cpp
temp/test4/cmake/: CMakeCache.txt  CMakeLists.txt
temp/test4/cmake/src/: CMakeLists.txt
temp/test4/cmake/src/hello/: CMakeLists.txt
temp/test4/cmake/src/main/: CMakeLists.txt
temp/test4/include/: hello.hpp
temp/test5/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  README.md  build.ninja  main.cpp  rules.ninja  test5
test/: CMakeLists.txt  main.cpp  test_BitBuffer.cpp  test_BitUtil.cpp
test/bitbuffer/: CMakeLists.txt  test_BitBuffer.cpp  test_BitUtil.cpp
test/http/: test_example.cpp
test/json/: test_json.cpp
tests/: CMakeLists.txt  xmake.lua
tests/bitbuffer/: CMakeLists.txt  test_BitBuffer.cpp  test_BitUtil.cpp
tests/fancy/: CMakeLists.txt
tests/fancy/foundation/: test_container_operator.cc  test_pair.cc
tests/http/: test_example.cpp
tests/json/: CMakeLists.txt  test_json.cc  test_json.cpp
tests/simple/: CMakeLists.txt  test_lambda.cc  test_main.cc  test_reference.cc  test_template.cc
tests/timber/: CMakeLists.txt  test_timber.cpp  test_timber_async.cc  test_timber_dependency.cc  test_timber_tmp.cpp
tpl/: Info.plist
